# hecras-compliance-checker

./: .gitignore  CLAUDE.md  pyproject.toml  render.yaml  requirements.txt
src/hecras_compliance/: __init__.py  cli.py
src/hecras_compliance/config/: fema_rules.yaml
src/hecras_compliance/config/states/: _template.yaml  maine.yaml  texas.yaml
src/hecras_compliance/parsers/: __init__.py  flow.py  geometry.py  plan.py  project.py
src/hecras_compliance/reporting/: __init__.py  markdown_report.py  pdf_report.py
src/hecras_compliance/rules/: __init__.py  engine.py
src/hecras_compliance/rules/checks/: __init__.py  boundaries.py  profiles.py  review.py
src/hecras_compliance/web/: app.py
src/hecras_compliance/web/templates/: base.html  index.html  report.html
tests/: test_cli.py  test_engine.py  test_fema_rules.py  test_flow_parser.py  test_geometry_parser.py  test_maine_rules.py  test_parsers.py  test_plan_parser.py  test_project_parser.py  test_reporting.py  test_texas_rules.py  test_web.py
tests/fixtures/: sample.f01  sample.g01  sample.p01  sample.prj  sample.u01
